<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Battleship</string>
    <string name="title_activity_match_history">Match History</string>
    <string name="title_activity_game_start">Place your ships</string>

    <string name="one" translatable="false">1</string>
    <string name="two" translatable="false">2</string>
    <string name="three" translatable="false">3</string>
    <string name="four" translatable="false">4</string>
    <string name="five" translatable="false">5</string>
    <string name="six" translatable="false">6</string>
    <string name="seven" translatable="false">7</string>
    <string name="eight" translatable="false">8</string>

    <string name="a" translatable="false">A</string>
    <string name="b" translatable="false">B</string>
    <string name="c" translatable="false">C</string>
    <string name="d" translatable="false">D</string>
    <string name="e" translatable="false">E</string>
    <string name="f" translatable="false">F</string>
    <string name="g" translatable="false">G</string>
    <string name="h" translatable="false">H</string>

    <string name="username">Username</string>
    <string name="save_user">Save User</string>
    <string name="take_picture">Take Picture</string>
    <string name="config_changed">Configuration changed</string>
    <string name="username_min_length">The username needs to be at least 3 characters</string>
    <string name="error_image">There has been an error getting your picture</string>
    <string name="image_missing">You need to add an image</string>
    <string name="error_netconn">No network connection</string>
    <string name="serverdlg_title">Battleship Server</string>
    <string name="serverdlg_msg">Waiting for a client…</string>
    <string name="clientdlg_msg">Battleship Client</string>
    <string name="serverip">Server IP</string>
    <string name="confirm">Confirm</string>
    <string name="game_finished">The game was finished</string>
    <string name="ships_not_placed_correctly">Your ship placement is not valid</string>

    <string name="play_one_player">One Player</string>
    <string name="play_join_server">Join Server</string>
    <string name="play_create_server">Create Server</string>
    <string name="match_history">Match History</string>
    <string name="change_user">Change User</string>

    <string name="confirm_placement">Confirm Placement</string>
    <string name="randomize_placement">Randomize Placement</string>
    <string name="change_mode">Change to Single-Player</string>
    <string name="camera_permission_required">Camera Permission is required for this app to run</string>
    <string name="error_opening_camera">There\'s been an error opening your camera, please try again or check this app\'s permissions</string>
    <string name="end_game_message">%1$s\n WON!!!</string>
    <string name="vs_ai">vs AI</string>
    <string name="vs_player">vs Player</string>
    <string name="victory">Victory</string>
    <string name="defeat">Defeat</string>
    <string name="vs" translatable="false">vs</string>
    <string name="num_hits_label">Number of Hits</string>
    <string name="num_ships_destroyed">Ships Sunken</string>
    <string name="rotate_ship">Rotate Ship</string>
    <string name="waiting_for_opponent_msg">Waiting for opponent to place their ships…</string>
    <string name="player_greeting">Hi %1$s!</string>
    <string name="restore_position">Restore Position</string>
    <string name="waiting_ship_reposition">Waiting for opponent to reposition a ship</string>
    <string name="change_flash_mode">Change flash Mode</string>
    <string name="switch_camera">Switch camera</string>
    <string name="clientdlg_connecting">Trying to connect to the server</string>
    <string name="could_not_connect_to_server">Couldn\'t connect to server</string>
    <string name="opponent_reposition_msg">Opponent hit all %d chances</string>
    <string name="not_your_turn">It\'s not your turn to play!</string>
    <string name="player_reposition_msg">You hit all %d chances, you can reposition a ship</string>
    <string name="clear_match_history">Clear Match History</string>
    <string name="empty_match_history">Your match history is empty, you need to play a game first!</string>
    <string name="game_mode_changed">Changed game mode to Single-Player</string>
    <string name="camera_error" translatable="false">This device doesn\'t support Camera2 API.</string>
</resources>
